@@ -1,3 +1,9 @@
+Wed Nov 20 12:39:57 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>
+
+	* xe_stubs.adb: Create_Main_Unit rebuilds the partition main
+	subprogram when Most_Recent_Stamp is more recent than the current
+	partition main subprogram file stamp.
+
 Fri Nov  8 16:35:19 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>
 
 	* xe_check.adb: Check that partition name does not conflict with
